--- a/FilmsApp/FilmsApp/Storyboards/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Storyboards/Base.lproj/Main.storyboard
@@ -91,13 +91,97 @@
                     <view key="view" contentMode="scaleToFill" id="kx0-o0-Z2N">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j4e-tI-a0n">
+                                <rect key="frame" x="20" y="94" width="374" height="318"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Xw-ZD-HhE">
+                                <rect key="frame" x="20" y="436" width="374" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="MtH-My-AvT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yDh-1c-Vhq">
+                                <rect key="frame" x="20" y="484" width="374" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Gtv-ek-oad"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hdR-Ze-OHE">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="dHw-Dw-3it">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Bcx-JM-kQD">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="RUR-mS-PIt" secondAttribute="height" multiplier="1:1" id="g3h-aE-1fQ"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="height" secondItem="Bcx-JM-kQD" secondAttribute="height" id="X8w-Xy-vCM"/>
+                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="top" secondItem="Bcx-JM-kQD" secondAttribute="top" id="oqh-ed-dEc"/>
+                                                <constraint firstItem="RUR-mS-PIt" firstAttribute="leading" secondItem="Bcx-JM-kQD" secondAttribute="leading" id="pLF-LC-aw2"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-Se-Xqn">
+                                <rect key="frame" x="20" y="636" width="374" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="m40-pB-O2S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g1F-Dz-zAG">
+                                <rect key="frame" x="20" y="684" width="374" height="154"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="QTD-GN-rw3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yDh-1c-Vhq" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="0Hi-HI-fwT"/>
+                            <constraint firstItem="yDh-1c-Vhq" firstAttribute="top" secondItem="6Xw-ZD-HhE" secondAttribute="bottom" constant="24" id="2ro-Yt-TdY"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="bottom" secondItem="g1F-Dz-zAG" secondAttribute="bottom" constant="24" id="5bJ-ih-gfF"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="HaX-Se-Xqn" secondAttribute="trailing" constant="20" id="6aZ-mX-UvU"/>
+                            <constraint firstItem="g1F-Dz-zAG" firstAttribute="top" secondItem="HaX-Se-Xqn" secondAttribute="bottom" constant="24" id="86V-2K-hvh"/>
+                            <constraint firstItem="j4e-tI-a0n" firstAttribute="top" secondItem="QTD-GN-rw3" secondAttribute="top" constant="50" id="872-iX-o9l"/>
+                            <constraint firstItem="HaX-Se-Xqn" firstAttribute="top" secondItem="yDh-1c-Vhq" secondAttribute="bottom" constant="24" id="Bbj-1J-KMU"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="yDh-1c-Vhq" secondAttribute="trailing" constant="20" id="M3N-Tk-Ide"/>
+                            <constraint firstItem="j4e-tI-a0n" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="POR-E7-rKp"/>
+                            <constraint firstItem="g1F-Dz-zAG" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="Vi6-SF-hbI"/>
+                            <constraint firstItem="6Xw-ZD-HhE" firstAttribute="top" secondItem="j4e-tI-a0n" secondAttribute="bottom" constant="24" id="bNS-2z-lW7"/>
+                            <constraint firstItem="6Xw-ZD-HhE" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="dP3-nM-iLY"/>
+                            <constraint firstItem="HaX-Se-Xqn" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="fRI-8h-Xnu"/>
+                            <constraint firstItem="6Xw-ZD-HhE" firstAttribute="centerY" secondItem="kx0-o0-Z2N" secondAttribute="centerY" id="ilj-1J-2dS"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="j4e-tI-a0n" secondAttribute="trailing" constant="20" id="p5B-77-m3y"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="6Xw-ZD-HhE" secondAttribute="trailing" constant="20" id="x2J-Td-MyF"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="g1F-Dz-zAG" secondAttribute="trailing" constant="20" id="yyB-jp-CQ2"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wRE-mW-tha" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1851" y="138"/>
+            <point key="canvasLocation" x="1850.7246376811595" y="137.94642857142856"/>
         </scene>
         <!--Film Pics View Controller-->
         <scene sceneID="2zS-TR-CXN">
