--- a/FilmsApp/FilmsApp/Storyboards/Base.lproj/Main.storyboard
+++ b/FilmsApp/FilmsApp/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="VKL-s8-gnk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Brc-pL-8pe">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -94,9 +94,56 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j4e-tI-a0n">
                                 <rect key="frame" x="20" y="94" width="374" height="318"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image04" translatesAutoresizingMaskIntoConstraints="NO" id="flR-1n-SWf">
+                                        <rect key="frame" x="0.0" y="0.0" width="187" height="318"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Q8G-8N-glu">
+                                        <rect key="frame" x="197" y="24" width="177" height="270"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название фильма" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8M9-i1-BDK">
+                                                <rect key="frame" x="0.0" y="0.0" width="177" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="u7w-YJ-l3P"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Год выпуска" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akz-ju-k3A">
+                                                <rect key="frame" x="0.0" y="123" width="177" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="1Ws-1Y-ztm"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uak-Ob-86R">
+                                                <rect key="frame" x="0.0" y="246" width="177" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="24" id="qhZ-hl-PN7"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstItem="Q8G-8N-glu" firstAttribute="top" secondItem="j4e-tI-a0n" secondAttribute="top" constant="24" id="3Mu-cr-TC2"/>
+                                    <constraint firstAttribute="trailing" secondItem="Q8G-8N-glu" secondAttribute="trailing" id="9ra-Ko-IXl"/>
+                                    <constraint firstItem="flR-1n-SWf" firstAttribute="top" secondItem="j4e-tI-a0n" secondAttribute="top" id="AZq-Xa-ygS"/>
+                                    <constraint firstItem="flR-1n-SWf" firstAttribute="leading" secondItem="j4e-tI-a0n" secondAttribute="leading" id="TQv-Xa-4UD"/>
+                                    <constraint firstItem="Q8G-8N-glu" firstAttribute="leading" secondItem="flR-1n-SWf" secondAttribute="trailing" constant="10" id="TTJ-U5-m9X"/>
+                                    <constraint firstAttribute="bottom" secondItem="Q8G-8N-glu" secondAttribute="bottom" constant="24" id="Udn-Ek-ixm"/>
+                                    <constraint firstItem="flR-1n-SWf" firstAttribute="width" secondItem="j4e-tI-a0n" secondAttribute="width" multiplier="0.5" id="dPC-mb-ArG"/>
+                                    <constraint firstAttribute="bottom" secondItem="flR-1n-SWf" secondAttribute="bottom" id="y91-Rn-q0T"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Xw-ZD-HhE">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кадры, Съёмки" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Xw-ZD-HhE">
                                 <rect key="frame" x="20" y="436" width="374" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="MtH-My-AvT"/>
@@ -125,7 +172,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image04" translatesAutoresizingMaskIntoConstraints="NO" id="RUR-mS-PIt">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="128" id="Ef4-GT-26a"/>
@@ -142,7 +189,7 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-Se-Xqn">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Описание" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HaX-Se-Xqn">
                                 <rect key="frame" x="20" y="636" width="374" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="m40-pB-O2S"/>
@@ -151,32 +198,35 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g1F-Dz-zAG">
-                                <rect key="frame" x="20" y="684" width="374" height="154"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="gu2-ph-YJj">
+                                <rect key="frame" x="20" y="674" width="374" height="154"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="QTD-GN-rw3"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="yDh-1c-Vhq" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="0Hi-HI-fwT"/>
                             <constraint firstItem="yDh-1c-Vhq" firstAttribute="top" secondItem="6Xw-ZD-HhE" secondAttribute="bottom" constant="24" id="2ro-Yt-TdY"/>
-                            <constraint firstItem="QTD-GN-rw3" firstAttribute="bottom" secondItem="g1F-Dz-zAG" secondAttribute="bottom" constant="24" id="5bJ-ih-gfF"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="gu2-ph-YJj" secondAttribute="trailing" constant="20" id="3hG-FX-I5m"/>
                             <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="HaX-Se-Xqn" secondAttribute="trailing" constant="20" id="6aZ-mX-UvU"/>
-                            <constraint firstItem="g1F-Dz-zAG" firstAttribute="top" secondItem="HaX-Se-Xqn" secondAttribute="bottom" constant="24" id="86V-2K-hvh"/>
                             <constraint firstItem="j4e-tI-a0n" firstAttribute="top" secondItem="QTD-GN-rw3" secondAttribute="top" constant="50" id="872-iX-o9l"/>
                             <constraint firstItem="HaX-Se-Xqn" firstAttribute="top" secondItem="yDh-1c-Vhq" secondAttribute="bottom" constant="24" id="Bbj-1J-KMU"/>
+                            <constraint firstItem="gu2-ph-YJj" firstAttribute="top" secondItem="HaX-Se-Xqn" secondAttribute="bottom" constant="14" id="Cnh-Hs-7fF"/>
+                            <constraint firstItem="gu2-ph-YJj" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="HVN-04-Rkv"/>
                             <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="yDh-1c-Vhq" secondAttribute="trailing" constant="20" id="M3N-Tk-Ide"/>
                             <constraint firstItem="j4e-tI-a0n" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="POR-E7-rKp"/>
-                            <constraint firstItem="g1F-Dz-zAG" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="Vi6-SF-hbI"/>
                             <constraint firstItem="6Xw-ZD-HhE" firstAttribute="top" secondItem="j4e-tI-a0n" secondAttribute="bottom" constant="24" id="bNS-2z-lW7"/>
                             <constraint firstItem="6Xw-ZD-HhE" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="dP3-nM-iLY"/>
                             <constraint firstItem="HaX-Se-Xqn" firstAttribute="leading" secondItem="QTD-GN-rw3" secondAttribute="leading" constant="20" id="fRI-8h-Xnu"/>
                             <constraint firstItem="6Xw-ZD-HhE" firstAttribute="centerY" secondItem="kx0-o0-Z2N" secondAttribute="centerY" id="ilj-1J-2dS"/>
+                            <constraint firstItem="QTD-GN-rw3" firstAttribute="bottom" secondItem="gu2-ph-YJj" secondAttribute="bottom" constant="34" id="mTh-nY-bET"/>
                             <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="j4e-tI-a0n" secondAttribute="trailing" constant="20" id="p5B-77-m3y"/>
                             <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="6Xw-ZD-HhE" secondAttribute="trailing" constant="20" id="x2J-Td-MyF"/>
-                            <constraint firstItem="QTD-GN-rw3" firstAttribute="trailing" secondItem="g1F-Dz-zAG" secondAttribute="trailing" constant="20" id="yyB-jp-CQ2"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -234,6 +284,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="image04" width="413" height="621"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
